fix: refactor responsive on tablet and 1024px

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -405,6 +405,11 @@ img {
   display: grid;
   grid-template-columns: var(--rows);
 }
+@media screen and (min-width: 48em) {
+  .grid-content.grid-header {
+    --rows: 1fr 1fr;
+  }
+}
 @media screen and (min-width: 90em) {
   .grid-content {
     --rows: 1fr 1fr;
@@ -456,8 +461,9 @@ img {
 }
 .header__content {
   transition: all 0.3s ease-in-out;
+  border-bottom: 1px solid #3333;
 }
-@media screen and (min-width: 75em) {
+@media screen and (min-width: 48em) {
   .header__content {
     order: 2;
   }
@@ -508,7 +514,12 @@ img {
   place-items: center;
   margin-bottom: 2.5rem;
 }
-@media screen and (min-width: 90em) {
+@media screen and (min-width: 62em) {
+  .header__title__container {
+    margin-top: 6.25rem;
+  }
+}
+@media screen and (min-width: 75em) {
   .header__title__container {
     margin-top: 9.375rem;
   }
@@ -520,11 +531,22 @@ img {
   text-align: center;
   font-size: var(--fontSize);
 }
+@media screen and (min-width: 48em) {
+  .header__content__title {
+    text-align: left;
+    width: 300px;
+  }
+}
+@media screen and (min-width: 62em) {
+  .header__content__title {
+    width: 380px;
+    --fontSize: 55px;
+    line-height: 3.9375rem;
+  }
+}
 @media screen and (min-width: 90em) {
   .header__content__title {
     --fontSize: 60px;
-    text-align: left;
-    line-height: 3.9375rem;
     width: 420px;
     font-weight: 800;
   }
@@ -569,7 +591,7 @@ img {
 .images__content img {
   width: 100%;
 }
-@media screen and (min-width: 90em) {
+@media screen and (min-width: 48em) {
   .images__content {
     flex-direction: row;
     justify-content: center;
