--- a/src/styles/scss/components/_images.scss
+++ b/src/styles/scss/components/_images.scss
@@ -4,7 +4,7 @@
     }
     display: flex;
     flex-direction: column;
-    @include responsiveQuery(xx-large) {
+    @include responsiveQuery(medium) {
         flex-direction: row;
         justify-content: center;
         align-items: center;
